# Primal_Study_LJW

./: .gitignore  README.md  project_dependencies_main.html  visualize_dependencies.py
URVFL/cifar10/: urvfl_cifar.py
alpha/: args.py  attacker.py  client.py  get_data.py  gpu_check.py  main.py  model.py  requirements.txt  server.py
foolbox/: Dockerfile  foolbox3.ipynb  readme.md
foolbox/.ipynb_checkpoints/: foolbox3-checkpoint.ipynb  test-checkpoint.ipynb
papers_codes/: project_dependencies_urvfl_cifar.html
papers_codes/PatchCURE/: .gitignore  reproducibility.md
pfedba_project_flwr/: client.py  evaluate_attack.py  main.py  utils.py
pfedba_project_tf/: client.py  main.py  utils.py
pfedba_tf_base/pfedba_project_flwr/: client.py  evaluate_attack.py  main.py  utils.py
pfedba_tf_base/pfedba_project_tf/: evaluate_attack.py
testbed/: main.py
testbed/vertical-fl/: pyproject.toml
testbed/vertical-fl-base/: pyproject.toml
testbed/vertical-fl-img/: pyproject.toml
testbed/vertical-fl-img/vertical_fl/: client_app.py  server_app.py  strategy.py  task.py
testing/: client.py  server.py
